--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
   </head>
   <body>
     <header>
-
+      <nav>
+        <div class="menu-icon">
+           <i class="fa fa-bars fa-2x"></i>
+        </div>
+        <div class="logo">
+           Sebastian Zuñiga Lobos
+        </div>
+        <div class="menu">
+           <ul>
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">Acerca de Mí</a></li>
+              <li><a href="#">Mi CV</a></li>
+              <li><a href="#">Mis Proyectos</a></li>
+              <li><a href="#">Contacto</a></li>
+           </ul>
+        </div>
+     </nav>
     </header>
     <main>
 
