--- a/index.html
+++ b/index.html
@@ -24,77 +24,87 @@
         </div>
      </nav>
     </header>
-    <main>
-      <section>
-        <div class="row">
-          <div class="col-4">
-            <div class="text-center perfil">
-              <img src="assets/img/perfil.jpg" class="fotoPerfil" alt="Imagen de Sebastian Zuñiga Lobos desde un Hospital con sistema RIS-PACS Konica Minolta">
-              <div>
-                <label class="textoPerfil">Sebastian Zuñiga Lobos</label>
-              </div>
-              <div>
-                <label class="textoDescripcionPerfil">Técnico Superior Electrónica</label>
-              </div>
-              <div>
-                <label class="textoDescripcionPerfil">Desarrolador de Software</label>
-              </div>
-              <div>
-                <label class="textoDescripcionPerfil">FullStack Javascript</label>
-              </div>  
+    
+    <section>
+      <div class="row">
+        <div class="col-4">
+          <div class="text-center perfil">
+            <img src="assets/img/perfil.jpg" class="fotoPerfil" alt="Imagen de Sebastian Zuñiga Lobos desde un Hospital con sistema RIS-PACS Konica Minolta">
+            <div>
+              <label class="textoPerfil">Sebastian Zuñiga Lobos</label>
             </div>
-          </div>
-          <div class="col-7">
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-              </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="assets/img/imgCuppon.png" class="d-block w-100" alt="Imagen Proyecto 'Cuppon', imagen referencial al proyecto original">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h3>Proyecto Cuppon</h3>
-                    <button class="btn btn-success">Saber Más</button>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img src="assets/img/imgIguana.png" class="d-block w-100" alt="Imagen Proyecto 'Iguana Page', imagen referencial al proyecto original">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h3>Proyecto Iguana Page</h3>
-                    <button class="btn btn-success">Saber Más</button>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img src="assets/img/imgLanding.png" class="d-block w-100" alt="Imagen Proyecto 'Landing Page', imagen referencial al proyecto original">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h3>Proyecto Landing</h3>
-                    <button class="btn btn-success">Saber Más</button>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img src="assets/img/imgCV.png" class="d-block w-100" alt="Imagen Proyecto 'Curriculum CV', imagen referencial al proyecto original">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h3>Proyecto CV</h3>
-                    <button class="btn btn-success">Saber Más</button>
-                  </div>
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
+            <div>
+              <label class="textoDescripcionPerfil">Técnico Superior Electrónica</label>
             </div>
+            <div>
+              <label class="textoDescripcionPerfil">Desarrolador de Software</label>
+            </div>
+            <div>
+              <label class="textoDescripcionPerfil">FullStack Javascript</label>
+            </div>  
           </div>
         </div>
-      </section>
-
+        <div class="col-7">
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/img/imgCuppon.png" class="d-block w-100" alt="Imagen Proyecto 'Cuppon', imagen referencial al proyecto original">
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>Proyecto Cuppon</h3>
+                  <button class="btn btn-success">Saber Más</button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/imgIguana.png" class="d-block w-100" alt="Imagen Proyecto 'Iguana Page', imagen referencial al proyecto original">
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>Proyecto Iguana Page</h3>
+                  <button class="btn btn-success">Saber Más</button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/imgLanding.png" class="d-block w-100" alt="Imagen Proyecto 'Landing Page', imagen referencial al proyecto original">
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>Proyecto Landing</h3>
+                  <button class="btn btn-success">Saber Más</button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/imgCV.png" class="d-block w-100" alt="Imagen Proyecto 'Curriculum CV', imagen referencial al proyecto original">
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>Proyecto CV</h3>
+                  <button class="btn btn-success">Saber Más</button>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+    <main>
+      <section class="mt-5">
+        <div class="container">
+          <div class="text-center">
+              <h3>Acerca de Mí</h3>
+              <p>Estudié Técnico en electrónica, desarrollo de Software plataforma C++ y Java. Especialista en HL7 y DICOM 3.0 dedicado al desarrollo de Software en ambiente Clínico y Hospitalarios.</p>
+              <p>Mis pasatiempos están en el Ambito Paranormal (investigador Paranormal</p>
+          </div>
+        </div> 
+      </section>   
     </main>
     <footer>
 
