info: Add section Curriculum Vitae in index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,16 @@
               <p>Mis pasatiempos están en el Ambito Paranormal (investigador Paranormal</p>
           </div>
         </div> 
-      </section>   
+      </section> 
+      <section class="mt-5">
+        <div class="container">
+          <div class="text-center">
+              <h3>Mi Curriculum Vitae</h3>
+              <p>Si quieres saber más de mi trayextoria laboral, pincha el Botón Conoceme Más</p>
+              <button class="btn btn-danger">Conoceme Más</button>
+          </div>
+        </div> 
+      </section> 
     </main>
     <footer>
 
