info: Add section proyectos in index.html

--- a/index.html
+++ b/index.html
@@ -114,6 +114,52 @@
           </div>
         </div> 
       </section> 
+      <section class="mt-5">
+        <div class="container">
+          <div class="text-center">
+            <h3>Mis proyectos de FullStack</h3>
+            <p>Revisa el siguiente Catalogo de Proyectos</p>
+            <div class="row justify-content-center">
+              <div class="col-md-6 mt-5">
+                <div class="card">
+                  <img src="assets/img/imgCuppon.png" class="card-img-top" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title mb-3">Proyecto Cuppon</h5>
+                    <button class="btn btn-warning">Ver Proyecto</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 mt-5">
+                <div class="card">
+                  <img src="assets/img/imgIguana.png" class="card-img-top" alt="Promoción Plumón Coral Fleece estampado en modelo y tamaño a elección">
+                  <div class="card-body">
+                    <h5 class="card-title mb-3">Proyecto Iguana</h5>
+                    <button class="btn btn-warning">Ver Proyecto</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 mt-5">
+                <div class="card">
+                  <img src="assets/img/imgLanding.png" class="card-img-top" alt="Promoción Plumón Coral Fleece estampado en modelo y tamaño a elección">
+                  <div class="card-body">
+                    <h5 class="card-title mb-3">Proyecto Landing</h5>
+                    <button class="btn btn-warning">Ver Proyecto</button> 
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 mt-5">
+                <div class="card">
+                  <img src="assets/img/imgCV.png" class="card-img-top" alt="Promoción Plumón Coral Fleece estampado en modelo y tamaño a elección">
+                  <div class="card-body">
+                    <h5 class="card-title mb-3">Proyecto CV</h5>
+                    <button class="btn btn-warning">Ver Proyecto</button> 
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> 
+      </section>  
     </main>
     <footer>
 
