--- a/index.html
+++ b/index.html
@@ -159,7 +159,22 @@
             </div>
           </div>
         </div> 
-      </section>  
+      </section> 
+      <section>
+        <div class="row text-center flex justify-content-center">
+          <h2>Contactame</h2>
+          <div class="col-4 mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Correo Electrónico</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div>
+        </div>
+        <div class="row text-center flex justify-content-center">
+          <div class="col-4 mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+        </div>
+      </section> 
     </main>
     <footer>
 
