--- a/index.html
+++ b/index.html
@@ -176,8 +176,10 @@
         </div>
       </section> 
     </main>
-    <footer>
-
+    <footer class="mt-0 p-3 bg-dark">
+      <div class="text-center">
+          <p class="text-muted">&#174; 2022 Desarrollado por Sebastian Zuñiga Lobos. Todos los derechos reservados.</p>
+      </div>
     </footer> 
     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
