--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="menu">
            <ul>
               <li><a href="#">Inicio</a></li>
-              <li><a href="#">Acerca de Mí</a></li>
-              <li><a href="#">Mi CV</a></li>
-              <li><a href="#">Mis Proyectos</a></li>
-              <li><a href="#">Contacto</a></li>
+              <li><a href="#acercaDeMi">Acerca de Mí</a></li>
+              <li><a href="#miCv">Mi CV</a></li>
+              <li><a href="#misProyectos">Mis Proyectos</a></li>
+              <li><a href="#miContacto">Contacto</a></li>
            </ul>
         </div>
      </nav>
@@ -96,7 +96,7 @@
     </section>
     
     <main>
-      <section class="mt-5">
+      <section id="acercaDeMi" class="mt-5">
         <div class="container">
           <div class="text-center">
               <h3>Acerca de Mí</h3>
@@ -105,7 +105,7 @@
           </div>
         </div> 
       </section> 
-      <section class="mt-5">
+      <section id="miCv" class="mt-5">
         <div class="container">
           <div class="text-center">
               <h3>Mi Curriculum Vitae</h3>
@@ -114,7 +114,7 @@
           </div>
         </div> 
       </section> 
-      <section class="mt-5">
+      <section id="misProyectos" class="mt-5">
         <div class="container">
           <div class="text-center">
             <h3>Mis proyectos de FullStack</h3>
@@ -160,7 +160,7 @@
           </div>
         </div> 
       </section> 
-      <section>
+      <section id="miContacto">
         <div class="row text-center flex justify-content-center">
           <h2>Contactame</h2>
           <div class="col-4 mb-3">
