info: Add link to projects in index.html

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                   <img src="assets/img/imgCuppon.png" class="card-img-top" alt="">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto Cuppon</h5>
-                    <button class="btn btn-warning">Ver Proyecto</button>
+                    <a href="portafolio/ProyectoCuppon/index.html"><button class="btn btn-warning">Ver Proyecto</button></a>
                   </div>
                 </div>
               </div>
@@ -134,7 +134,7 @@
                   <img src="assets/img/imgIguana.png" class="card-img-top" alt="Promoción Plumón Coral Fleece estampado en modelo y tamaño a elección">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto Iguana</h5>
-                    <button class="btn btn-warning">Ver Proyecto</button>
+                    <a href="portafolio/ProyectoIguana/index.html"><button class="btn btn-warning">Ver Proyecto</button></a>
                   </div>
                 </div>
               </div>
@@ -143,7 +143,7 @@
                   <img src="assets/img/imgLanding.png" class="card-img-top" alt="Promoción Plumón Coral Fleece estampado en modelo y tamaño a elección">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto Landing</h5>
-                    <button class="btn btn-warning">Ver Proyecto</button> 
+                    <a href="portafolio/ProyectoLanding/index.html"><button class="btn btn-warning">Ver Proyecto</button> </a>
                   </div>
                 </div>
               </div>
@@ -152,7 +152,7 @@
                   <img src="assets/img/imgCV.png" class="card-img-top" alt="Promoción Plumón Coral Fleece estampado en modelo y tamaño a elección">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto CV</h5>
-                    <button class="btn btn-warning">Ver Proyecto</button> 
+                    <a href="portafolio/proyectoCV/index.html"><button class="btn btn-warning">Ver Proyecto</button></a> 
                   </div>
                 </div>
               </div>
