fix: fix link to projects in index.html

--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
                 <img src="assets/img/imgCuppon.png" class="d-block w-100" alt="Imagen Proyecto 'Cuppon', imagen referencial al proyecto original">
                 <div class="carousel-caption d-none d-md-block">
                   <h3>Proyecto Cuppon</h3>
-                  <button class="btn btn-success">Saber Más</button>
+                  <button class="btn btn-success"><a href="#misProyectos">Saber Más</a></button>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="assets/img/imgIguana.png" class="d-block w-100" alt="Imagen Proyecto 'Iguana Page', imagen referencial al proyecto original">
                 <div class="carousel-caption d-none d-md-block">
                   <h3>Proyecto Iguana Page</h3>
-                  <button class="btn btn-success">Saber Más</button>
+                  <button class="btn btn-success"><a href="#misProyectos">Saber Más</a></button>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="assets/img/imgLanding.png" class="d-block w-100" alt="Imagen Proyecto 'Landing Page', imagen referencial al proyecto original">
                 <div class="carousel-caption d-none d-md-block">
                   <h3>Proyecto Landing</h3>
-                  <button class="btn btn-success">Saber Más</button>
+                  <button class="btn btn-success"><a href="#misProyectos">Saber Más</a></button>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="assets/img/imgCV.png" class="d-block w-100" alt="Imagen Proyecto 'Curriculum CV', imagen referencial al proyecto original">
                 <div class="carousel-caption d-none d-md-block">
                   <h3>Proyecto CV</h3>
-                  <button class="btn btn-success">Saber Más</button>
+                  <button class="btn btn-success"><a href="#misProyectos">Saber Más</a></button>
                 </div>
               </div>
             </div>
@@ -125,7 +125,7 @@
                   <img src="assets/img/imgCuppon.png" class="card-img-top" alt="">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto Cuppon</h5>
-                    <a href="portafolio/ProyectoCuppon/index.html"><button class="btn btn-warning">Ver Proyecto</button></a>
+                    <button class="btn btn-warning"><a href="portafolio/ProyectoCuppon/index.html">Ver Proyecto</a></button>
                   </div>
                 </div>
               </div>
@@ -134,7 +134,7 @@
                   <img src="assets/img/imgIguana.png" class="card-img-top" alt="Promoción Plumón Coral Fleece estampado en modelo y tamaño a elección">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto Iguana</h5>
-                    <a href="portafolio/ProyectoIguana/index.html"><button class="btn btn-warning">Ver Proyecto</button></a>
+                    <button class="btn btn-warning"><a href="portafolio/ProyectoIguana/index.html">Ver Proyecto</a></button>
                   </div>
                 </div>
               </div>
@@ -143,7 +143,7 @@
                   <img src="assets/img/imgLanding.png" class="card-img-top" alt="Promoción Plumón Coral Fleece estampado en modelo y tamaño a elección">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto Landing</h5>
-                    <a href="portafolio/ProyectoLanding/index.html"><button class="btn btn-warning">Ver Proyecto</button> </a>
+                    <button class="btn btn-warning"><a href="portafolio/ProyectoLanding/index.html">Ver Proyecto</a></button>
                   </div>
                 </div>
               </div>
@@ -152,7 +152,7 @@
                   <img src="assets/img/imgCV.png" class="card-img-top" alt="Promoción Plumón Coral Fleece estampado en modelo y tamaño a elección">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto CV</h5>
-                    <a href="portafolio/proyectoCV/index.html"><button class="btn btn-warning">Ver Proyecto</button></a> 
+                    <button class="btn btn-warning"><a href="portafolio/proyectoCV/index.html">Ver Proyecto</a></button> 
                   </div>
                 </div>
               </div>
