--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   </head>
   <body>
     <header>
-      <nav>
-        <div class="menu">
+      <nav class="navbar navbar-expand-lg px-5 navbar-dark">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="menu collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
            <ul>
-              <li><a href="#">Inicio</a></li>
               <li><a href="#acercaDeMi">Acerca de Mí</a></li>
               <li><a href="#miCv">Mi CV</a></li>
               <li><a href="#misProyectos">Mis Proyectos</a></li>
@@ -27,7 +29,7 @@
     
     <section>
       <div class="row">
-        <div class="col-4">
+        <div class="col-12 col-lg-4">
           <div class="text-center perfil">
             <img src="assets/img/perfil.jpg" class="fotoPerfil" alt="Imagen de Sebastian Zuñiga Lobos desde un Hospital con sistema RIS-PACS Konica Minolta">
             <div>
@@ -44,7 +46,7 @@
             </div>  
           </div>
         </div>
-        <div class="col-7">
+        <div class="col-10 offset-1 col-lg-6">
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
