info: add link to social network in footer index.html

--- a/index.html
+++ b/index.html
@@ -182,6 +182,13 @@
       <div class="text-center">
           <p class="text-muted">&#174; 2022 Desarrollado por Sebastian Zuñiga Lobos. Todos los derechos reservados.</p>
       </div>
+      <div class="text-center">
+        <!-- Facebook -->
+        <a href="https://web.facebook.com/sebastian.zuniga.lob"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com/LobosZuiga"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/sebastian.zuniga.lob/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/sebastian-zu%C3%B1iga-lobos-8432b047/"><i class="fab fa-linkedin-in"></i></a>
+      </div>
     </footer> 
     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
