info: Add Alt to images from Proyectos in  index.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="row justify-content-center">
               <div class="col-md-6 mt-5">
                 <div class="card">
-                  <img src="assets/img/imgCuppon.png" class="card-img-top" alt="">
+                  <img src="assets/img/imgCuppon.png" class="card-img-top" alt="Imagen de referencia a proyecto Cuppon, muestra index.html de proyecto">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto Cuppon</h5>
                     <a href="portafolio/ProyectoCuppon/index.html"><button class="btn btn-warning">Ver Proyecto</button></a>
@@ -133,7 +133,7 @@
               </div>
               <div class="col-md-6 mt-5">
                 <div class="card">
-                  <img src="assets/img/imgIguana.png" class="card-img-top" alt="Promoción Plumón Coral Fleece estampado en modelo y tamaño a elección">
+                  <img src="assets/img/imgIguana.png" class="card-img-top" alt="Imagen de referencia a proyecto Iguana, muestra index.html de proyecto">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto Iguana</h5>
                     <a href="portafolio/ProyectoIguana/index.html"><button class="btn btn-warning">Ver Proyecto</button></a>
@@ -142,7 +142,7 @@
               </div>
               <div class="col-md-6 mt-5">
                 <div class="card">
-                  <img src="assets/img/imgLanding.png" class="card-img-top" alt="Promoción Plumón Coral Fleece estampado en modelo y tamaño a elección">
+                  <img src="assets/img/imgLanding.png" class="card-img-top" alt="Imagen de referencia a proyecto Landing, muestra index.html de proyecto">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto Landing</h5>
                     <a href="portafolio/ProyectoLanding/index.html"><button class="btn btn-warning">Ver Proyecto</button></a>
@@ -151,7 +151,7 @@
               </div>
               <div class="col-md-6 mt-5">
                 <div class="card">
-                  <img src="assets/img/imgCV.png" class="card-img-top" alt="Promoción Plumón Coral Fleece estampado en modelo y tamaño a elección">
+                  <img src="assets/img/imgCV.png" class="card-img-top" alt="Imagen de referencia a proyecto CV, muestra index.html de proyecto">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto CV</h5>
                     <a href="portafolio/proyectoCV/index.html"><button class="btn btn-warning">Ver Proyecto</button></a> 
