info: add link a to button CV in index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="text-center">
               <h1>Mi Curriculum Vitae</h1>
               <p>Si quieres saber más de mi trayextoria laboral, pincha el Botón Conoceme Más</p>
-              <button class="btn btn-danger">Conoceme Más</button>
+              <a href="portafolio/proyectoCV/index.html"><button class="btn btn-danger">Conoceme Más</button></a>
           </div>
         </div> 
       </section> 
