--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="text-center">
               <h1>Mi Curriculum Vitae</h1>
               <p>Si quieres saber más de mi trayextoria laboral, pincha el Botón Conoceme Más</p>
-              <a href="portafolio/proyectoCV/index.html"><button class="btn btn-danger">Conoceme Más</button></a>
+              <a href="https://sebazzz6.github.io/cv.github.io/"><button class="btn btn-danger">Conoceme Más</button></a>
           </div>
         </div> 
       </section> 
@@ -127,7 +127,7 @@
                   <img src="assets/img/imgCuppon.png" class="card-img-top" alt="Imagen de referencia a proyecto Cuppon, muestra index.html de proyecto">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto Cuppon</h5>
-                    <a href="portafolio/ProyectoCuppon/index.html"><button class="btn btn-warning">Ver Proyecto</button></a>
+                    <a href="https://sebazzz6.github.io/cuppon.github.io/"><button class="btn btn-warning">Ver Proyecto</button></a>
                   </div>
                 </div>
               </div>
@@ -136,7 +136,7 @@
                   <img src="assets/img/imgIguana.png" class="card-img-top" alt="Imagen de referencia a proyecto Iguana, muestra index.html de proyecto">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto Iguana</h5>
-                    <a href="portafolio/ProyectoIguana/index.html"><button class="btn btn-warning">Ver Proyecto</button></a>
+                    <a href="https://sebazzz6.github.io/iguana.github.io/"><button class="btn btn-warning">Ver Proyecto</button></a>
                   </div>
                 </div>
               </div>
@@ -145,7 +145,7 @@
                   <img src="assets/img/imgLanding.png" class="card-img-top" alt="Imagen de referencia a proyecto Landing, muestra index.html de proyecto">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto Landing</h5>
-                    <a href="portafolio/ProyectoLanding/index.html"><button class="btn btn-warning">Ver Proyecto</button></a>
+                    <a href="https://sebazzz6.github.io/landing.github.io/"><button class="btn btn-warning">Ver Proyecto</button></a>
                   </div>
                 </div>
               </div>
@@ -154,7 +154,7 @@
                   <img src="assets/img/imgCV.png" class="card-img-top" alt="Imagen de referencia a proyecto CV, muestra index.html de proyecto">
                   <div class="card-body">
                     <h5 class="card-title mb-3">Proyecto CV</h5>
-                    <a href="portafolio/proyectoCV/index.html"><button class="btn btn-warning">Ver Proyecto</button></a> 
+                    <a href="https://sebazzz6.github.io/cv.github.io/"><button class="btn btn-warning">Ver Proyecto</button></a> 
                   </div>
                 </div>
               </div>
