--- a/index.html
+++ b/index.html
@@ -177,6 +177,12 @@
           </div>
         </div>
       </section> 
+      <section>
+        <div class="row text-center flex justify-content-center">
+          <h1>Aquí Amigos pueden dejar sus Folks</h1>
+          <p>Ejemnplo: Aqui paso SebaZ a dejar un saludo</p>
+        </div>
+      </section>
     </main>
     <footer class="mt-0 p-3 bg-dark">
       <div class="text-center">
