info: add card class to index.html

--- a/index.html
+++ b/index.html
@@ -98,25 +98,33 @@
     </section>
     
     <main>
-      <section id="acercaDeMi" class="mt-5">
+      <section id="acercaDeMi" class="mt-5 pt-5">
         <div class="container">
           <div class="text-center">
+            <div class="card">
               <h1>Acerca de Mí</h1>
-              <p>Estudié Técnico en electrónica, desarrollo de Software plataforma C++ y Java. Especialista en HL7 y DICOM 3.0 dedicado al desarrollo de Software en ambiente Clínico y Hospitalarios.</p>
-              <p>Mis pasatiempos están en el Ambito Paranormal (investigador Paranormal</p>
+              <div class="card-body">
+                <p>Estudié Técnico en electrónica, desarrollo de Software plataforma C++ y Java. Especialista en HL7 y DICOM 3.0 dedicado al desarrollo de Software en ambiente Clínico y Hospitalarios.</p>
+                <p>Mis pasatiempos están en el Ambito Paranormal (investigador Paranormal</p>
+              </div>
+            </div>
           </div>
         </div> 
       </section> 
-      <section id="miCv" class="mt-5">
+      <section id="miCv" class="mt-5 pt-5">
         <div class="container">
           <div class="text-center">
+            <div class="card">
               <h1>Mi Curriculum Vitae</h1>
-              <p>Si quieres saber más de mi trayextoria laboral, pincha el Botón Conoceme Más</p>
-              <a href="https://sebazzz6.github.io/cv.github.io/"><button class="btn btn-danger">Conoceme Más</button></a>
+              <div class="card-body">
+                <p>Si quieres saber más de mi trayextoria laboral, pincha el Botón Conoceme Más</p>
+                <a href="https://sebazzz6.github.io/cv.github.io/"><button class="btn btn-danger">Conoceme Más</button></a>
+              </div>
+            </div>
           </div>
         </div> 
       </section> 
-      <section id="misProyectos" class="mt-5">
+      <section id="misProyectos" class="mt-5 pt-5">
         <div class="container">
           <div class="text-center">
             <h1>Mis proyectos de FullStack</h1>
@@ -162,7 +170,7 @@
           </div>
         </div> 
       </section> 
-      <section id="miContacto">
+      <section id="miContacto" class="pt-5">
         <div class="row text-center flex justify-content-center">
           <h1>Contactame</h1>
           <div class="col-4 mb-3">
@@ -177,7 +185,7 @@
           </div>
         </div>
       </section> 
-      <section>
+      <section id="misFolks" class="pt-5">
         <div class="row text-center flex justify-content-center">
           <h1>Aquí Amigos pueden dejar sus Folks</h1>
           <p>Ejemnplo: Aqui paso SebaZ a dejar un saludo</p>
