Added greetings from PL. Put a Marquee

--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
         <div class="row text-center flex justify-content-center">
           <h1>Aquí Amigos pueden dejar sus Folks</h1>
           <p>Ejemnplo: Aqui paso SebaZ a dejar un saludo</p>
+
+          <h1>Saludos Seba</h1>
+          <p>Pedro L.</p>
+          <marquee behavior="scroll" direction="left">Buen fin de curso!!!</marquee>
         </div>
       </section>
     </main>
