update index ncll
Agregar saludo en p

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <header>
+      <!--NavBar-->
       <nav class="navbar navbar-expand-lg px-5 navbar-dark">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -192,6 +193,8 @@
 
           <h1>Saludos Seba</h1>
           <p>Pedro L.</p>
+          <h1>Saludos y exito</h1>
+          <p>Nicolas C.</p>
           <marquee behavior="scroll" direction="left">Buen fin de curso!!!</marquee>
         </div>
       </section>
